<resources>
    <string name="app_name">Shopit</string>

    <string name="powered_by_richard_duah_boakye">Powered by Richard Duah Boakye</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="rating">8.16</string>
    <string name="stock">50 in stock</string>
    <string name="name">Unisex Premium T-Shirt</string>
    <string name="price">12.95</string>
    <string name="todo">TODO</string>
    <string name="back_online">Back online</string>
    <string name="description_text">Description text</string>
    <string name="description">Description</string>
    <string name="men_s">men\'s</string>
    <string name="category">Category:</string>
    <string name="_50_in_stock">50 in stock</string>
    <string name="number_in_stock">Number in stock :</string>
    <string name="price_title">Price :</string>
    <string name="rating_title">Rating :</string>
</resources>