<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_ripple_background"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/itemImg"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_shimmer"
                android:contentDescription="@string/todo"
                android:transitionName="ImageToImage"/>

                <LinearLayout
                    android:id="@+id/linear_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/smokyBlack"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:alpha="0.9"/>

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:background="@drawable/rating_background"
                        android:textColor="@android:color/white"
                        android:padding="3dp"
                        android:textStyle="bold"
                        android:text="@string/rating"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_rating"
                        android:drawablePadding="3dp"
                        android:drawableTint="@color/Yellow"/>

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/price"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:alpha="0.8"
                        android:drawableStart="@drawable/ic_dollar"
                        android:drawableTint="@android:color/black"
                        android:drawablePadding="-5dp"/>

                    <TextView
                        android:id="@+id/stock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"

                        android:textColor="@color/redLight"
                        android:text="@string/stock" />




                </LinearLayout>




        </LinearLayout>

       <!-- <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
           />-->

    </LinearLayout>


</RelativeLayout>